<resources>
    <string name="app_name">ElectronicWalletMoneyPay</string>
    <string name="version">Version 1.0.1</string>
    <string name="password">password</string>
    <string name="Email">Account</string>
    <string name="Signup">Signup</string>
    <string name="Login">Login</string>
    <string name="continue_with_zalo">Continue with Zalo</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="title_trang_chu">Home</string>
    <string name="ltitle_ich_su">History</string>
    <string name="title_thong_bao">Notification</string>
    <string name="title_ca_nhan">Profile</string>
    <string name="KM">Promotion</string>
    <string name="text_time_notification">1 hour ago</string>
    <string name="text_notification">Customers are important, customers will be followed by customers.</string>
    <string name="text_transaction_history">Transaction history</string>
    <string name="text_filter">Filter</string>
    <string name="time_transaction_history">10:30</string>
    <string name="item_transaction_history_time">Transaction content</string>
    <string name="date_transaction_history_time">10/06/2024</string>
    <string name="transaction_history">+ 100.000</string>
    <string name="user_name_transaction_history">account name</string>
    <string name="Setting">Setting</string>
    <string name="Language">Language</string>
    <string name="Language_vietnam">Việt Nam</string>
    <string name="Language_english">English</string>
    <string name="Recharge">Nạp Tiền</string>
    <string name="Withdraw_Money">Rút Tiền</string>
    <string name="hello_blank_fragment">Xin chào mảnh trống</string>
    <string name="scan_amp_pay"><![CDATA[Scan & Pay]]></string>
    <string name="login">Log in</string>
    <string name="or">or</string>
    <string name="nhập_số_tiền">enter amount</string>
    <string name="vnd">VND</string>
    <string name="chọn_nguồn_tiền">Choose Funds Source</string>
    <string name="tài_khoản_amp_bảo_mật"><![CDATA[Account & Security]]></string>
    <string name="ngân_hàng_liên_kết">Affiliate Bank</string>
    <string name="thiết_lập_thông_báo">Notification Settings</string>
    <string name="ngôn_ngữ">Language</string>
    <string name="quy_tắc_cộng_đồng">Community Rules</string>
    <string name="đăng_xuất">Log out</string>
    <string name="quên_mật_khẩu">Forgot password ?</string>
    <string name="số_dư_trong_ví_vnd">Wallet Balance (VND)</string>
    <string name="_0">0</string>
    <string name="nhập_số_tiền_vnd">Enter Amount(VND)</string>
    <string name="số_tiền_tối_thiểu_có_thể_rút_là_50_000_vnd">The minimum amount that can be withdrawn is 50.000 VND</string>
    <string name="nguồn_tiền">Funds</string>
    <string name="chuyển_tiền">Transfer money</string>
    <string name="mã_qr">QR code</string>
    <string name="rút_tiền">Withdraw money</string>
    <string name="dịch_vụ">Service</string>
    <string name="chuyển_tiền_ngân_hàng">Transfer money in bank</string>
    <string name="thanh_toán_hóa_đơn">Pay the bill</string>
    <string name="thanh_toán_tiền_nước">Water bill payment</string>
    <string name="thanh_toán_tiền_điện">payment of electricity</string>
    <string name="nạp_thẻ_dt">Phone recharge card</string>
    <string name="thanh_toán_bảo_hiểm">Payment insurance</string>
    <string name="thanh_toán_truyền_hình">Television payment</string>
    <string name="mua_ve_xem_phim">Buy movie tickets</string>
    <string name="số_dư_ví">Wallet Balance</string>
    <string name="nạp_tiền">Recharge</string>
    <string name="user_name">User Name</string>
    <string name="google_gmail_com">google@gmail.com</string>
    <string name="_0968888888">0968888888</string>
    <string name="Profile">Profile</string>
    <string name="support_center">Support center</string>
    <string name="introduce">Introduce</string>
    <string name="rate">Rate</string>
    <string name="title_notification">Notification</string>
</resources>