<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="12dp"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/transaction_history_image_item"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="12dp"
        android:src="@drawable/ic_transaction_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/item_transaction_history_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/roboto"
        android:text="@string/user_name_transaction_history"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/item_transaction_history_time"
        app:layout_constraintStart_toEndOf="@id/transaction_history_image_item"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/item_transaction_history_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:gravity="start"
        android:layout_marginTop="3dp"
        android:text="@string/item_transaction_history_time"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/transaction_history_image_item"
        app:layout_constraintTop_toBottomOf="@id/item_transaction_history_text"
        />

    <TextView
        android:id="@+id/time_transaction_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"

        android:fontFamily="@font/roboto_light"
        android:text="@string/time_transaction_history"
        android:textSize="12sp"

        app:layout_constraintEnd_toStartOf="@id/date_transaction_history"
        app:layout_constraintStart_toEndOf="@+id/item_transaction_history_text"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/date_transaction_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/date_transaction_history_time"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/transaction_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_transaction_history"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/transaction_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/transaction_history"
        android:textSize="12sp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_transaction_history"
        />


</androidx.constraintlayout.widget.ConstraintLayout>